<resources>
    <string name="app_name">LoginAppAndroid</string>
    <string name="connect">Sign In</string>
    <string name="create_account">Sign Up</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="image_content_description">Un Android avec un chien</string>
</resources>
